# optimal-polygon-triangulation

./: .gitignore  PSEUDOCODE.md  README.md  USAGE.md  app.py  pyproject.toml  sample_input1.txt
assets/: comparison.csv  comparison_by_type.csv  raw.csv  time.csv
sample_input/: polygon2.txt
scripts/: generate_testing_suite.py  run_analysis.py
src/: constants.py
src/ear_clipping/: __init__.py  __main__.py  algorithm.py
src/models/: __init__.py  point.py  polygon.py
src/optimal/: __init__.py  __main__.py  algorithm.py  cost.py  tracer.py  utils.py
src/utils/: __init__.py  geometry.py  io.py  validation.py  visualization.py
